nav-alignment fix

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -111,6 +111,9 @@
   font-size: 12px;
 }
 
+.hamburger{
+  display: none !important;
+}
   /* Mobile styles */
 @media (max-width: 768px) {
   /* Hide the navigation links initially */
@@ -151,7 +154,7 @@
   /* Show the hamburger menu */
   .hamburger {
     background-image: url('../../assets//svgs/hamburger.svg');
-    display: flex;
+    display: flex !important;
     background-color: white;
     height: 50px;
     width: 50px;
